# arack-engine-search

./: .env.example  .env.production.example  .gitignore  ACCOUNT_SERVICE_PLAN.md  API_DOCUMENTATION.md  AUTHENTICATION.md  AUTOMATIC_OAUTH_IMPLEMENTATION.md  BERT_FIX_PROPOSAL.md  BROWSER_COOKIE_TEST_GUIDE.md  CHANGES_SUMMARY.md  CLAUDE.md  COOKIE_DOMAIN_DIAGNOSTIC_PLAN.md  COOKIE_DOMAIN_FIX_PLAN_V2.md  COOKIE_FIX_DEPLOYMENT.md  COOKIE_ISSUE_DIAGNOSIS_PLAN.md  CRAWL_TROUBLESHOOTING.md  CROSS_SUBDOMAIN_COOKIE_FIX_PLAN.md  CUSTOM_SSO_SYSTEM.md  Cargo.toml  DEC23_FIXES_SUMMARY.md  DEPLOYMENT_PLAN.md  Dockerfile.email  Dockerfile.search  Dockerfile.search.backup  Dockerfile.sqlx-prepare  EMAIL_DELIVERY_FIX_COMPLETE.md  EMAIL_FEATURES_TEST_REPORT.md  EMAIL_ISSUES_RESOLVED.md  EMAIL_PHASE4_COMPLETE.md  EMAIL_PHASE5_COMPLETE.md  EMAIL_SERVICE_SAFEGUARDS.md  FINAL_SOLUTION_COMPARISON.md  HYDRA_FIX_COMPLETE.md  IMAGE_SEARCH_PLAN.md  IMAGE_SEARCH_PROGRESS.md  INTEGRATION_COMPLETE.md  JMAP_AUTH_FIX_PLAN.md  JMAP_AUTH_FIX_PLAN_V2.md  KRATOS_MIGRATION_GUIDE.md  KRATOS_QUICKSTART.md  (+51 more)
.sqlx/: query-00102f4ca2b67e76fddb651fa36e6de9f42e67fbc49a8aacab92af9ee8c5826b.json  query-054389e8365ab04df1a8973340ee8530da823dc870afe2ba5e4c0f7f9b1a1edd.json  query-0bf6743834a57e2bdea2b9894909279047f465d9815cab376081dca76434d793.json  query-0ca6ca16988f023e4f4b2824ab07a42f4681983608eb8e696453407cccbfa141.json  query-1895efd9282d5e504245fb260d8913c45c326637f321a87f35687e495b3ddb7f.json  query-1f26b7287f96a03d2756c2dbfa0452a985c193331bad98a009cfbae2eb2afdd4.json  query-1fb5600a249f4c6e6a8214d72b2614d6bed0cf3ea574c3fc9801f640ad9cb357.json  query-21608c8266dfdf1db2e322710284676df802400f854276b2106313b5a5e8368f.json  query-261cd19e9f67c6ce1056262f6c86ce8d73ec39471e7a84c3be06601c7792c495.json  query-265dc8e33e49d3bafe00a0bf966ede58251e3f20236ad4a936959801556d4988.json  query-4863a4a07e59bb8d44ebe7278d1abb24d290288c1dbe7a28bd8da8ee04bc4982.json  query-4ef9dee2c79e3bef425ff305f8467878879c68998339d9be0487469b53686741.json  query-5732c4265947f3a1a5d0feba8730b9ba53817e990955e722a16b19d12c8b305d.json  query-57dbdedaa0c57e6957fd2e0d7af7dcc373ee4e1dc50182fa88c4cf03847159d4.json  query-5b59de16c392b96ae1f5133e86c5fafe15da7fb61aee6420309530d569188c84.json  query-63d10b0708fb28ccb1f4bff51f5ed243dba7694317d393e8dab7fdc0d41c8db9.json  query-64b19fe33562edae2e19fd13156f3811b2cd253f8f44c5ea1eb4d0690a74be8e.json  query-8099136586174a83211d7a3b1b86d9cf6cc6d4130c5d04d9dcf26c83dce4bc54.json  query-9c2d0d2404158109abdef982c5407604556ab7354c43e95bd6d8bcdb4f373b71.json  query-a813ab3c5812ba53cdb2ffe2e420f5e37f4de9236050ded7dd8cf5d1c1d0f173.json  query-a9495b07d58f119bbf2b75a40b6e48ab3c31707f202d0e5122ad1ad402ea8022.json  query-a94e686ab6d14572f937f82abea106ae6fbd61ac4eccc0a8a82d96fa9572fda9.json  query-aad5d53c0b25132b2f9e3a0a235115c903727a055c4101ac8b152b733f6f89fd.json  query-af1b126a511efaaa0fccca8b1b1001d13fb4c4fd1b9b58748f05266ca93471e0.json  query-b0fd971380088c29640538f151ed7a6c2d5ca0678c2c6f039f5e18439c9fc881.json  query-b128903393985ff735ec352dba57c923781938ec23ad75e1ce1e87bf18be92cd.json  query-b52d8b90fa1bd8ed1c570b25e53d872047332d607c3eb4a39ab49147c2c6eeae.json  query-ba7e9ff925b3ca23277e4547d7dbe03406240303458135d140996e5e715f52b0.json  query-be067e6cd5e5b80ef53918950538af737ef8068a0ab9b86f5781b21f7cb9e0f8.json  query-c56c025ca43927f2ee9ff6390cbf13dbc3b72a14da05b249edb136c5b4445707.json  query-cb79149eba52c5cbbb8db647613589a0229c96b66eb0b75f2ec96a8fc344cc4b.json  query-d091bb9493bf819b87a4589bc5ce02838e8966acc8c9e72b62f4eb63d8ec3060.json  query-e57461f58cc61344b6e4563ffebf5856157e149393fca8bd1e4fa6fb1d838da3.json  query-f654f762365751d3b1258e2ec9ef09242fc2cab1575dd18bbd06d780b7d7a93c.json  query-fbecea6b4832a92df6776bb55b2c7977539376edb8878a43875c89090da4105a.json
account-service/: Dockerfile  go.mod  go.sum
api/: mod.rs
auth/callback/: index.html
centrifugo/: config.json
email/: mod.rs  oauth.rs  types.rs
email/ai/: mod.rs  priority.rs  smart_compose.rs  summarize.rs  types.rs
email/api/: ai.rs  mod.rs
email/centrifugo/: mod.rs
email/contacts/: mod.rs
email/jmap/: mod.rs  types.rs
email/provisioning/: mod.rs  retry.rs
frontend/: .env.example  package-lock.json  package.json
frontend-admin/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-email/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-search/: .env.example  CUSTOM_COMPONENTS_GUIDE.md  LOCATION_FEATURE.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 001_create_collections.sql  002_create_auth_tables.sql  003_create_ory_user_features.sql  004_optimize_autocomplete.sql  005_create_schemas.sql  006_create_email_tables.sql  007_add_email_metadata_columns.sql  008_create_ai_interactions_table.sql  009_add_user_fields.sql  010_create_oauth_tokens.sql  011_add_zitadel_user_id.sql  012_make_kratos_id_nullable.sql  013_add_zitadel_to_email_tables.sql
nginx/: nginx.conf
scripts/: migrate_users_to_kratos.sh
search/: mod.rs
shared/: package-lock.json  package.json
src/: lib.rs.old  main.rs  types.rs
(+269 files in other folders)
